# reown-lottery

./: .env.txt  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
anchor/: Anchor.toml
anchor/programs/count/: Cargo.toml
anchor/programs/count/src/: lib.rs
anchor/programs/lottery/: Cargo.toml
anchor/programs/lottery/src/: lib.rs
anchor/programs/lottery/src/helpers/: mod.rs  ticket.rs  transaction.rs  util.rs  validation.rs
anchor/src/: counter-exports.ts  index.ts  lottery-exports.ts
anchor/tests/: test.spec.ts
public/.well-known/: walletconnect.txt
src/components/: Ticket.tsx
src/components/@Layout/HomeLayout/: HomeLayout.tsx
src/configs/: appkit.ts
src/configs/seo/: config.ts
src/configs/theme/foundations/: styles.ts
src/containers/Admin/: Admin.tsx
src/containers/Count/: Count.tsx
src/containers/Count/components/: Card.tsx
src/containers/Count/hooks/: useCountProgram.ts  useCountProgramAccount.ts  useCounter.ts
src/containers/Home/: Home.tsx
src/containers/Home/components/: Countdown.tsx
src/containers/Home/hooks/: usePool.ts
src/containers/Start/: Start.tsx
src/containers/Tickets/: Tickets.tsx
src/containers/Tickets/components/: PastDraw.tsx
src/hocs/: withAdminGuard.tsx  withAppProvider.tsx  withAuthGuard.tsx
src/hooks/: useAnchorProvider.ts  useLottery.ts
src/pages/: _app.tsx  index.tsx
src/pages/admin/: index.tsx
src/pages/api/: draw_winnders.ts  pick-winner.ts
src/pages/count/: index.tsx
src/pages/start/: index.tsx
src/pages/tickets/: index.tsx
(+4 files in other folders)
