[package]
name = "lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[build]
rustflags = [
  "-C", "link-arg=-zmax-symbol-len=16",
  "-C", "opt-level=3"
]

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
oorandom = "11.1.3"
solana-program = "1.10.32"

